Fixed bug where project image gallery buttons were sometimes partly underneath the images, which made it difficult to click. Fixed by increase its z-index (and also increasing the z-index of the navbar so that it appears on top of the image gallery buttons).

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -284,7 +284,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     backdrop-filter: var(--nav-menu-backdrop-filter);
 }
 
@@ -293,7 +293,7 @@ body {
     top: 50px;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
 }
 
 #navbar-links-mobile {
@@ -516,6 +516,7 @@ body {
     align-items: center;
     justify-content: center;
     position: absolute;
+    z-index: 1;
     top: 50%;
     width: 50px;
     height: 100px;
